--- a/GLES/makefile
+++ b/GLES/makefile
@@ -1,7 +1,7 @@
 build: dummy
-	clang++ main.cpp glad/src/glad.c -o main -Iglad/include -lglfw -lSDL2 -lSDL2main -w
+	clang++ main.cpp ../glad/src/glad.c -o main -I../glad/include -lglfw -lSDL2 -lSDL2main -w
 
 mingw32: dummy
-	clang++ main.cpp glad/src/glad.c GLFW/lib/libglfw3.a -o main -Iglad/include -IGLFW/include -ISDL2/include -lmingw32 -lgdi32 -lSDL2main -lSDL2 -std=c++11 -w
+	clang++ main.cpp ../glad/src/glad.c ../GLFW/lib/libglfw3.a -o main -I../glad/include -I../GLFW/include -I../SDL2/include -lmingw32 -lgdi32 -lSDL2main -lSDL2 -std=c++11 -w
 
 dummy:
