Added Windows Compile Support

--- a/SDLFlip/makefile
+++ b/SDLFlip/makefile
@@ -1,5 +1,7 @@
 linux: dummy
 	clang++ *.cpp -o main -lSDL2_image -lSDL2 -lSDL2main -lGL -lGLU
+
+mingw32: dummy
+	clang++ *.cpp ../glades/src/glad.c -o main -I../glades/include -I../SDL2/include -lmingw32 -lopengl32 -lgdi32 -lSDL2main -lSDL2 -lSDL2_image -std=c++11 -w
 	
 dummy:
-	
