--- a/SDLFlip/makefile
+++ b/SDLFlip/makefile
@@ -7,4 +7,7 @@ mingw32: dummy
 mac: dummy
 	clang++ *.cpp ../glad/src/glad.c -o main -I../glad/include -I../SDL2.framework/Headers -I../SDL2_image.framework/Headers -I../SDL2_ttf.framework/Headers -framework Cocoa -framework IOKit -F .. -framework SDL2 -framework SDL2_image -framework SDL2_ttf -rpath .. -std=c++11 -w
 
+mac-brew: dummy
+	clang++ *.cpp ../glad/src/glad.c -o main -I/opt/homebrew/include -L/opt/homebrew/lib -I../glad/include -lSDL2 -lSDL2_image -lSDL2_ttf -std=c++11 -w
+
 dummy:
