--- a/SDLTriangle/makefile
+++ b/SDLTriangle/makefile
@@ -1,5 +1,5 @@
 build: dummy
-	clang++ main.cpp ../glad/src/glad.c -o main -I../glad/include -lglfw -lSDL2 -lSDL2main -w
+	clang++ main.cpp ../glad/src/glad.c -o main -I../glad/include -lglfw -lSDL2 -w
 
 mingw32: dummy
 	clang++ main.cpp ../glad/src/glad.c -o main -I../glad/include -lmingw32 -lSDL2main -lSDL2 -std=c++11 -w
